--- a/assets/html/sobre.html
+++ b/assets/html/sobre.html
@@ -26,12 +26,12 @@
     <link href="assets/img/favicon_io_A/android-chrome-192x192.png" rel="apple-touch-icon">
 
     <!-- Template Main CSS File -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <!--Tittle-->
-    <title class="BS">ABITARE</title>
+    <title>Sobre nós</title>
 </head>
 
-<body id="home">
+<body id="sobre">
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
@@ -42,39 +42,36 @@
             <div class="container">
                 <div class="header__container">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="./assets/img/logo/abitare__logo.svg" alt=""> </a>
+                        <a href="../index.html"><img src="../assets/img/logo/abitare_white.png" alt=""> </a>
                     </div>
                     <nav class="header__menu mobile-menu">
-                        <ul class="header__menu_items">
-                            <li class="active"> <a class="hover" href="./index.html">Home</a>
+                        <ul>
+                            <li class="active"> <a href="../index.html">Home</a>
                             </li>
-                            <li><a class="hover" href="./html/sobre.html">Sobre nós</a></li>
-                            <li><a class="hover" href="./html/projetos.html">Projetos</a></li>
-                            <li><a class="hover" href="./html/contato.html">Contatos</a></li>
+                            <li><a href="../html/sobre.html">Sobre nós</a></li>
+                            <li><a href="./html/projetos.html">Projetos</a></li>
+                            <li><a href="./html/contato.html">Contatos</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
-        <section id="hero">
+        <!-- <section id="hero">
+            <div class="hero-container">
                 <div class="hero-container">
                     <div class="fade-in">
                         <div class="hero-logo">
-                            <!-- <img class="" src="./assets/img/logo/A.svg" alt=""> -->
+                           # <img class="" src="./assets/img/logo/A.svg" alt=""> 
                         </div>
                     </div>
                 </div>
-        </section><!-- Final do hero -->
+        </section>Final do hero -->
     </div>
-    <main id="main">
-        <section id="banner" class="banner">
-            <div class="container"></div>
-        </section>
-        <section class=""></section>
-    </main>
-    <footer></footer>
-    <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+
+
+
+
+
 </body>
 
 </html>
