header color active

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <nav class="header__menu mobile-menu">
                         <ul class="header__menu_items">
-                            <li class="active"> <a class="hover" href="./index.html">Home</a>
+                            <li> <a class="hover" href="./index.html">Home</a>
                             </li>
                             <li><a class="hover" href="./html/sobre.html">Sobre nós</a></li>
                             <li><a class="hover" href="./html/projetos.html">Projetos</a></li>
@@ -74,6 +74,7 @@
     </main>
     <footer></footer>
     <!-- Template Main JS File -->
+    <script src="assets/js/plugin/simple-slide.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
