--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="twitter:image" content="">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Favicons -->
-    <link href="assets/img/favicon_io_A/favicon-32x32.png" rel="icon">
-    <link href="assets/img/favicon_io_A/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon/favicon_io/favicon-32x32.png" rel="icon">
+    <link href="assets/img/favicon/favicon_io/android-chrome-192x192.png" rel="apple-touch-icon">
 
     <!-- Template Main CSS File -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -56,23 +56,83 @@
                 </div>
             </div>
         </header>
-        <section id="hero">
-                <div class="hero-container">
-                    <div class="fade-in">
-                        <div class="hero-logo">
-                            <!-- <img class="" src="./assets/img/logo/A.svg" alt=""> -->
+        <section id="hero" class="banner1">
+            <div class="hero-container">
+                <div class="fade-in">
+                    <div class="hero-logo">
+                        <div class="autoras container">
+                            <h1>Cinthia David</h1>
+                            <h1> &</h1>
+                            <h1>Andressa Rodrigues</h1>
                         </div>
                     </div>
                 </div>
+            </div>
         </section><!-- Final do hero -->
     </div>
     <main id="main">
         <section id="banner" class="banner">
-            <div class="container"></div>
+            <div class="container">
+                <h1>“Gostamos de conhecer histórias, cada projeto é único, o que a gente faz é reconhecer os estilos, compreender os gostos e desvendar os sonhos dos nossos clientes.”</h1>
+            </div>
+        </section>
+        <section id="hero" class="banner2">
+            <div class="hero-container">
+            </div>
         </section>
         <section class=""></section>
+
     </main>
-    <footer></footer>
+    <footer id="footer" class="">
+        <div class="footer__bg">
+            <div class="footer__logo">
+                <a href="./index.html"><img src="./assets/img/favicon/favicon_io/android-chrome-512x512.png" alt=""></a>
+            </div>
+            <div class="footer container">
+                <div class="">
+
+                    <div class="footer__menu">
+                        <nav class="footer__menu_nav">
+                            <h3>MENU</h3>
+
+                            <ul class="footer__menu_items">
+                                <li> <a class="hover" href="./index.html">Home</a>
+                                </li>
+                                <li><a class="hover" href="./html/sobre.html">Sobre nós</a></li>
+                                <li><a class="hover" href="./html/projetos.html">Projetos</a></li>
+                                <li><a class="hover" href="./html/contato.html">Contatos</a></li>
+                                <li><a class="hover" href="./html/termosecondicoes.html">Termos e condições</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="footer__contato">
+                    <h3>Nossos Contatos</h3>
+                    <ul>
+                        <li>Tel.: <a href="tel:+5511984073541"> +55 (11) 9 8407-3541</a></li>
+                        <li>Email:<a href="mailto:abitare.aq@gmail.com"> abitare.aq@gmail.com</a></li>
+                        <li>Endereço: Av.Industrial - Jardim Santo André - SP, 09080510</li>
+                        <li>Endereço: Parque São Jorge São Paulo - SP, 03086025</li>
+                    </ul>
+
+                    <div class="redes">
+                        <h3>Nos acompanhe nas Redes Sociais</h3>
+
+                        <a href="./">
+                            <img src="./assets/img/footer/redes/instagram.svg" alt="">
+                        </a>
+                        <a href="./">
+                            <img src="./assets/img/footer/redes/facebook.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__form">
+                    <h3>Formulário</h3>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Template Main JS File -->
     <script src="assets/js/plugin/simple-slide.js"></script>
     <script src="assets/js/main.js"></script>
