--- a/index.html
+++ b/index.html
@@ -72,8 +72,37 @@
     </div>
     <main id="main">
         <section id="banner" class="banner">
-            <div class="container">
+            <div class="recent_projects container">
                 <h1>“Gostamos de conhecer histórias, cada projeto é único, o que a gente faz é reconhecer os estilos, compreender os gostos e desvendar os sonhos dos nossos clientes.”</h1>
+                <div class="card_collection">
+                    <div class="cards cards__one">
+                        <img src="./assets/img/projects/Apartamento _ CG.jpeg" alt="">
+                        <div class="cards__text">
+                            <h3>Apartamento | CG</h3>
+                            <p>Detalhes dessa sala de jantar acoplada com a sala de estar e cozinha.
+                                Os pendentes em rattan e a cadeiras em palha indiana trazem todo charme para esse espaço.</p>
+                            <a href="#"> Saiba Mais</a>
+                        </div>
+                    </div>
+                    <div class="cards cards__one">
+                        <img src="./assets/img/projects/project.webp" alt="">
+                        <div class="cards__text">
+                            <h3>Apartamento | CG</h3>
+                            <p>Detalhes dessa sala de jantar acoplada com a sala de estar e cozinha.
+                                Os pendentes em rattan e a cadeiras em palha indiana trazem todo charme para esse espaço.</p>
+                            <a href="#"> Saiba Mais</a>
+                        </div>
+                    </div>
+                    <div class="cards cards__one">
+                        <img src="./assets/img/projects/Apartamento _ CG.jpeg" alt="">
+                        <div class="cards__text">
+                            <h3>Apartamento | CG</h3>
+                            <p>Detalhes dessa sala de jantar acoplada com a sala de estar e cozinha.
+                                Os pendentes em rattan e a cadeiras em palha indiana trazem todo charme para esse espaço.</p>
+                            <a href="#"> Saiba Mais</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="hero" class="banner2">
@@ -88,9 +117,19 @@
             <div class="footer__logo">
                 <a href="./index.html"><img src="./assets/img/favicon/favicon_io/android-chrome-512x512.png" alt=""></a>
             </div>
-            <div class="footer container">
-                <div class="">
+            <div class="footer__redes container">
+                <h3>Nos acompanhe nas Redes Sociais</h3>
 
+                <a href="./">
+                    <img src="./assets/img/footer/redes/instagram.svg" alt="">
+                </a>
+                <a href="./">
+                    <img src="./assets/img/footer/redes/facebook.svg" alt="">
+                </a>
+            </div>
+            <div class="footer container">
+
+                <div class="">
                     <div class="footer__menu">
                         <nav class="footer__menu_nav">
                             <h3>MENU</h3>
@@ -114,17 +153,6 @@
                         <li>Endereço: Av.Industrial - Jardim Santo André - SP, 09080510</li>
                         <li>Endereço: Parque São Jorge São Paulo - SP, 03086025</li>
                     </ul>
-
-                    <div class="redes">
-                        <h3>Nos acompanhe nas Redes Sociais</h3>
-
-                        <a href="./">
-                            <img src="./assets/img/footer/redes/instagram.svg" alt="">
-                        </a>
-                        <a href="./">
-                            <img src="./assets/img/footer/redes/facebook.svg" alt="">
-                        </a>
-                    </div>
                 </div>
                 <div class="footer__form">
                     <h3>Formulário</h3>
