--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -8,10 +8,13 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- Favicons -->
-    <link href="assets/img/favicon/favicon_io/favicon-32x32.png" rel="icon">
-    <link href="assets/img/favicon/favicon_io/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link href="../img/favicon/favicon_io/favicon-32x32.png" rel="icon">
+    <link href="../img/favicon/favicon_io/android-chrome-192x192.png" rel="apple-touch-icon">
     <!-- Link CSS -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Link JS -->
+    <script src="../js/scriptnav.js" defer></script>
+    <!-- <script src="../js/scriptfont.js" defer></script> -->
     <!-- Tittle -->
     <title>Abitare</title>
 </head>
@@ -20,11 +23,11 @@
     <!-- HEADER -->
     <header class="header_bg">
         <div class="container header">
-            <a href="./index.html"><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""></a>
-            <button class="mobile-nav-toggle" aria-controls="header-menu-items" aria-expanded="false"><span class="sr-only"></span></button>
+            <a class="logo" href="./index.html"><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""></a>
+            <button class="mobile_nav_toggle" aria-controls="header_menu_items" aria-expanded="false"><span class="sr-only"></span></button>
             <nav class="header_menu" aria-label="primaria">
                 <ul class="header_menu_items font-1-m" data-visible="false">
-                    <li><a href="#" class="hover">Home</a></li>
+                    <li class="active"><a href="#" class="hover">Home</a></li>
                     <li><a href="#" class="hover">Sobre Nós</a></li>
                     <li><a href="#" class="hover">Projetos</a></li>
                     <li><a href="#" class="hover">Contatos</a></li>
@@ -68,5 +71,5 @@
     </main>
 
 </body>
-
+<script></script>
 </html>
