--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,75 +1,127 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
     <!-- Favicons -->
-    <link href="../img/favicon/favicon_io/favicon-32x32.png" rel="icon">
-    <link href="../img/favicon/favicon_io/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link href="../img/favicon/favicon_io/favicon-32x32.png" rel="icon" />
+    <link
+      href="../img/favicon/favicon_io/android-chrome-192x192.png"
+      rel="apple-touch-icon"
+    />
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Link JS -->
     <script src="../js/scriptnav.js" defer></script>
     <!-- <script src="../js/scriptfont.js" defer></script> -->
     <!-- Tittle -->
     <title>Abitare</title>
-</head>
+  </head>
 
-<body id="home">
+  <body id="home">
     <!-- HEADER -->
     <header class="header_bg">
-        <div class="container header">
-            <a class="logo" href="./index.html"><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""></a>
-            <button class="mobile_nav_toggle" aria-controls="header_menu_items" aria-expanded="false"><span class="sr-only"></span></button>
-            <nav class="header_menu" aria-label="primaria">
-                <ul class="header_menu_items font-1-m" data-visible="false">
-                    <li class="active"><a href="#" class="hover">Home</a></li>
-                    <li><a href="#" class="hover">Sobre Nós</a></li>
-                    <li><a href="#" class="hover">Projetos</a></li>
-                    <li><a href="#" class="hover">Contatos</a></li>
-                </ul>
-            </nav>
-
-        </div>
+      <div class="container header">
+        <a class="logo" href="./index.html"
+          ><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""
+        /></a>
+        <button
+          class="mobile_nav_toggle"
+          aria-controls="header_menu_items"
+          aria-expanded="false"
+        >
+          <span class="sr-only"></span>
+        </button>
+        <nav class="header_menu" aria-label="primaria">
+          <ul class="header_menu_items font-1-m" data-visible="false">
+            <li class="active home">
+              <a href="./index.html" class="hover">Home</a>
+            </li>
+            <li class="sobre"><a href="#" class="hover">Sobre Nós</a></li>
+            <li class="projetos"><a href="#" class="hover">Projetos</a></li>
+            <li class="contatos"><a href="#" class="hover">Contatos</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!-- BANNER -->
     <div id="banner" class="banner_fixed">
-        <div class="banner_container">
-        </div>
-    </div>
-    </div>
+      <div class="banner_container"></div>
     </div>
     <main id="content" class="container">
-        <section class="sobre_nos">
-            <h2 class="title">Sobre Nós</h2>
-            <div class="persons">
-                <div class="person_1_grid">
-                    <div class="person_1">
-                        <img src="../img/perfil/cinthia e deka perfil.jpg" alt="">
-                    </div>
-                    <div class="person_1_text">
-                        <h3 class="tittle">Nome</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut. Saepe, aliquam. Officiis impedit architecto adipisci dolorum esse! Recusandae itaque nostrum eveniet eius, aliquid dolorum quibusdam dolore excepturi. Suscipit, reprehenderit.</p>
-                    </div>
-                </div>
-                <div class="person_2_grid">
-                    <div class="person_2_text">
-                        <h3 class="tittle">Nome</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut. Saepe, aliquam. Officiis impedit architecto adipisci dolorum esse! Recusandae itaque nostrum eveniet eius, aliquid dolorum quibusdam dolore excepturi. Suscipit, reprehenderit.</p>
-                    </div>
-                    <div class="person_2">
-                        <img src="../img/perfil/cinthia e deka perfil.jpg" alt="">
-                    </div>
-                </div>
+      <section id="sobre_nos" class="sobre_nos">
+        <h2 class="title">Sobre Nós</h2>
+        <div class="persons">
+          <div class="person_0_grid">
+            <div class="person_0">
+              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
-        </section>
-
+            <div class="person_0_text">
+              <h3 class="tittle">
+                Cinthia David<br />
+                & <br />
+                Andressa Rodrigues
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia, aut. Saepe, aliquam. Officiis impedit architecto
+                adipisci dolorum esse! Recusandae itaque nostrum eveniet eius,
+                aliquid dolorum quibusdam dolore excepturi. Suscipit,
+                reprehenderit.
+              </p>
+            </div>
+          </div>
+          <div class="person_1_grid">
+            <div class="person_1">
+              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
+            </div>
+            <div class="person_1_text">
+              <h3 class="tittle">Cinthia David</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia, aut. Saepe, aliquam. Officiis impedit architecto
+                adipisci dolorum esse! Recusandae itaque nostrum eveniet eius,
+                aliquid dolorum quibusdam dolore excepturi. Suscipit,
+                reprehenderit.
+              </p>
+            </div>
+          </div>
+          <div class="person_2_grid">
+            <div class="person_2_text">
+              <h3 class="tittle">Andressa Rodrigues</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia, aut. Saepe, aliquam. Officiis impedit architecto
+                adipisci dolorum esse! Recusandae itaque nostrum eveniet eius,
+                aliquid dolorum quibusdam dolore excepturi. Suscipit,
+                reprehenderit.
+              </p>
+            </div>
+            <div class="person_2">
+              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="gallery" class="gallery">
+        <div class="gallery_row">
+          <div class="gallery_column">
+            <img src="../img/gallery/20231108_174046.jpg" alt="" />
+            <img src="../img/gallery/20240201_113121.jpg" alt="" />
+            <img src="../img/gallery/20240506_162907-ANIMATION.gif" alt="" />
+            <img src="../img/gallery/20240201_114944.jpg" alt="" />
+            <img src="../img/gallery/20240201_175919.jpg" alt="" />
+            <img src="../img/gallery/20240506_160625-ANIMATION.gif" alt="" />
+            <img src="../img/gallery/20240506_170503.jpg" alt="" />
+            <img src="../img/gallery/Estante.jpg" alt="" />
+            <img src="../img/gallery/completo.jpg" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
-
-</body>
-<script></script>
+  </body>
+  <script></script>
 </html>
