--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -23,7 +23,7 @@
 
   <body id="home">
     <!-- HEADER -->
-    <header class="header_bg">
+    <header id="header" class="header_bg">
       <div class="container header">
         <a class="logo" href="./index.html"
           ><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""
@@ -106,22 +106,75 @@
           </div>
         </div>
       </section>
-      <section id="gallery" class="gallery">
+      <section id="gallery" class="gallery container">
         <div class="gallery_row">
           <div class="gallery_column">
-            <img src="../img/gallery/20231108_174046.jpg" alt="" />
-            <img src="../img/gallery/20240201_113121.jpg" alt="" />
-            <img src="../img/gallery/20240506_162907-ANIMATION.gif" alt="" />
-            <img src="../img/gallery/20240201_114944.jpg" alt="" />
-            <img src="../img/gallery/20240201_175919.jpg" alt="" />
-            <img src="../img/gallery/20240506_160625-ANIMATION.gif" alt="" />
-            <img src="../img/gallery/20240506_170503.jpg" alt="" />
-            <img src="../img/gallery/Estante.jpg" alt="" />
-            <img src="../img/gallery/completo.jpg" alt="" />
+            <a href="">
+              <img src="../img/gallery/20231108_174046.jpg" alt="" />
+            </a>
+            <a href="">
+              <img src="../img/gallery/20240201_113121.jpg" alt="" />
+            </a>
+            <a href="">
+              <img src="../img/gallery/20240506_162907-ANIMATION.gif" alt="" />
+            </a>
+            <a href="">
+              <img src="../img/gallery/20240201_114944.jpg" alt="" />
+            </a>
+            <a href="">
+              <img src="../img/gallery/20240201_175919.jpg" alt="" />
+            </a>
+            <a href="">
+              <img src="../img/gallery/20240506_160625-ANIMATION.gif" alt="" />
+            </a>
+            <a href=""
+              ><img src="../img/gallery/20240506_170503.jpg" alt="" />
+            </a>
+            <a href=""> <img src="../img/gallery/Estante.jpg" alt="" /></a>
           </div>
         </div>
       </section>
     </main>
+    <footer id="footer" class="footer">
+      <div class="footer_content container">
+        <div class="mapa_footer">
+          <ul class="mapa_footer_items" data-visible="false">
+            <li class="active home">
+              <a href="#header" class="map_home hover">Home</a>
+            </li>
+            <li class="sobre">
+              <a href="#" class="map_sobre hover">Sobre Nós</a>
+            </li>
+            <li class="projetos">
+              <a href="#" class="map_projetos hover">Projetos</a>
+            </li>
+            <li class="contatos">
+              <a href="#" class="map_contatos hover">Contatos</a>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <p class="footer_direitos font-2-m cor-p6">
+            Abitare © Todos os direitos reservados.
+          </p>
+        </div>
+        <div class="logo_redes">
+          <a href="./">
+            <img src="../img/footer/redes/instagram.svg" alt="" />
+          </a>
+          <a href="./">
+            <img src="../img/footer/redes/pinterest.svg" alt="" />
+          </a>
+          <a
+            href="https://wa.me/5511984073541?text=Olá,%20gostaria%20de%20mais%20informações!"
+            target="_blank"
+          >
+            <img src="../img/footer/redes/whatsapp.svg" alt="" />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
   <script></script>
 </html>
