--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       rel="apple-touch-icon"
     />
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <!-- Link JS -->
-    <script src="../js/scriptnav.js" defer></script>
+    <script src="/js/scriptnav.js" defer></script>
     <!-- <script src="../js/scriptfont.js" defer></script> -->
     <!-- Tittle -->
     <title>Abitare</title>
@@ -26,7 +26,7 @@
     <header id="header" class="header_bg">
       <div class="container header">
         <a class="logo" href="./index.html"
-          ><img src="../img/logo/LOGO-ABITARE-SVG.svg" alt=""
+          ><img src="/img/logo/LOGO-ABITARE-SVG.svg" alt=""
         /></a>
         <button
           class="mobile_nav_toggle"
@@ -38,7 +38,7 @@
         <nav class="header_menu" aria-label="primaria">
           <ul class="header_menu_items font-1-m" data-visible="false">
             <li class="active home">
-              <a href="./index.html" class="hover">Home</a>
+              <a href="/index.html" class="hover">Home</a>
             </li>
             <li class="sobre"><a href="#" class="hover">Sobre Nós</a></li>
             <li class="projetos"><a href="#" class="hover">Projetos</a></li>
@@ -57,7 +57,7 @@
         <div class="persons">
           <div class="person_0_grid">
             <div class="person_0">
-              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="/img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
             <div class="person_0_text">
               <h3 class="tittle">
@@ -76,7 +76,7 @@
           </div>
           <div class="person_1_grid">
             <div class="person_1">
-              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="/img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
             <div class="person_1_text">
               <h3 class="tittle">Cinthia David</h3>
@@ -101,7 +101,7 @@
               </p>
             </div>
             <div class="person_2">
-              <img src="../img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="/img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -110,27 +110,27 @@
         <div class="gallery_row">
           <div class="gallery_column">
             <a href="">
-              <img src="../img/gallery/20231108_174046.jpg" alt="" />
+              <img src="/img/gallery/20231108_174046.jpg" alt="" />
             </a>
             <a href="">
-              <img src="../img/gallery/20240201_113121.jpg" alt="" />
+              <img src="/img/gallery/20240201_113121.jpg" alt="" />
             </a>
             <a href="">
-              <img src="../img/gallery/20240506_162907-ANIMATION.gif" alt="" />
+              <img src="/img/gallery/20240506_162907-ANIMATION.gif" alt="" />
             </a>
             <a href="">
-              <img src="../img/gallery/20240201_114944.jpg" alt="" />
+              <img src="/img/gallery/20240201_114944.jpg" alt="" />
             </a>
             <a href="">
-              <img src="../img/gallery/20240201_175919.jpg" alt="" />
+              <img src="/img/gallery/20240201_175919.jpg" alt="" />
             </a>
             <a href="">
-              <img src="../img/gallery/20240506_160625-ANIMATION.gif" alt="" />
+              <img src="/img/gallery/20240506_160625-ANIMATION.gif" alt="" />
             </a>
             <a href=""
-              ><img src="../img/gallery/20240506_170503.jpg" alt="" />
+              ><img src="/img/gallery/20240506_170503.jpg" alt="" />
             </a>
-            <a href=""> <img src="../img/gallery/Estante.jpg" alt="" /></a>
+            <a href=""> <img src="/img/gallery/Estante.jpg" alt="" /></a>
           </div>
         </div>
       </section>
@@ -161,16 +161,16 @@
         </div>
         <div class="logo_redes">
           <a href="./">
-            <img src="../img/footer/redes/instagram.svg" alt="" />
+            <img src="/img/footer/redes/instagram.svg" alt="" />
           </a>
           <a href="./">
-            <img src="../img/footer/redes/pinterest.svg" alt="" />
+            <img src="/img/footer/redes/pinterest.svg" alt="" />
           </a>
           <a
             href="https://wa.me/5511984073541?text=Olá,%20gostaria%20de%20mais%20informações!"
             target="_blank"
           >
-            <img src="../img/footer/redes/whatsapp.svg" alt="" />
+            <img src="/img/footer/redes/whatsapp.svg" alt="" />
           </a>
         </div>
       </div>
