update header and mobile

--- a/index.html
+++ b/index.html
@@ -24,27 +24,43 @@
   <body id="home">
     <!-- HEADER -->
     <header id="header" class="header_bg">
-      <div class="container header">
-        <a class="logo" href="./index.html"
-          ><img src="./img/logo/LOGO-ABITARE-SVG.svg" alt=""
-        /></a>
-        <button
-          class="mobile_nav_toggle"
-          aria-controls="header_menu_items"
-          aria-expanded="false"
-        >
-          <span class="sr-only"></span>
-        </button>
-        <nav class="header_menu" aria-label="primaria">
-          <ul class="header_menu_items font-1-m" data-visible="false">
-            <li class="active home">
-              <a href="./index.html" class="hover">Home</a>
-            </li>
-            <li class="sobre"><a href="#" class="hover">Sobre Nós</a></li>
-            <li class="projetos"><a href="#" class="hover">Projetos</a></li>
-            <li class="contatos"><a href="#" class="hover">Contatos</a></li>
-          </ul>
-        </nav>
+      <div class="header">
+        <div class="box">
+          <div class="ur_pos container">
+            <a class="logo" href="./index.html"
+              ><img
+                class="filter_svg"
+                src="./img/logo/LOGO-ABITARE-SVG.svg"
+                alt=""
+            /></a>
+            <button
+              class="mobile_nav_toggle"
+              aria-controls="header_menu_items"
+              aria-expanded="false"
+            >
+              <span class="sr-only"></span>
+            </button>
+            <nav class="header_menu" aria-label="primaria">
+              <ul
+                class="header_menu_items color_a font-1-m"
+                data-visible="false"
+              >
+                <li class="active home">
+                  <a href="./index.html" class="hover">Home</a>
+                </li>
+                <li class="sobre">
+                  <a href="#" class="hover">Sobre Nós</a>
+                </li>
+                <li class="projetos">
+                  <a href="#" class="hover">Projetos</a>
+                </li>
+                <li class="contatos">
+                  <a href="#" class="hover">Contatos</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </header>
     <!-- BANNER -->
