--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <main id="content" class="container">
       <section id="sobre_nos" class="sobre_nos">
-        <h2 class="title">Sobre Nós</h2>
+        <h2 class="title font-1-xxl">Sobre Nós</h2>
         <div class="persons">
           <div class="person_0_grid">
             <div class="person_0">
