--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 alt=""
             /></a>
             <button
-              class="mobile_nav_toggle"
+              class="mobile_nav_toggle filter_svg"
               aria-controls="header_menu_items"
               aria-expanded="false"
             >
