--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                   <a href="./index.html" class="hover">Home</a>
                 </li>
                 <li class="sobre">
-                  <a href="#" class="hover">Sobre Nós</a>
+                  <a href="./html/sobre.html" class="hover">Sobre Nós</a>
                 </li>
                 <li class="projetos">
-                  <a href="#" class="hover">Projetos</a>
+                  <a href="./html/projetos.html" class="hover">Projetos</a>
                 </li>
                 <li class="contatos">
-                  <a href="#" class="hover">Contatos</a>
+                  <a href="./html/contatos.html" class="hover">Contatos</a>
                 </li>
               </ul>
             </nav>
@@ -69,8 +69,8 @@
     </div>
     <main id="content" class="container">
       <section id="sobre_nos" class="sobre_nos">
-        <h2 class="title">Sobre Nós</h2>
         <div class="persons">
+          <h2 class="title">Sobre Nós</h2>
           <div class="person_0_grid">
             <div class="person_0">
               <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
@@ -95,7 +95,11 @@
               <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
             <div class="person_1_text">
-              <h3 class="tittle">Cinthia David</h3>
+              <h3 class="tittle">
+                Cinthia David<br />
+                & <br />
+                Andressa Rodrigues
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Mollitia, aut. Saepe, aliquam. Officiis impedit architecto
@@ -105,7 +109,7 @@
               </p>
             </div>
           </div>
-          <div class="person_2_grid">
+          <!-- <div class="person_2_grid">
             <div class="person_2_text">
               <h3 class="tittle">Andressa Rodrigues</h3>
               <p>
@@ -119,10 +123,10 @@
             <div class="person_2">
               <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
-      <section id="gallery" class="gallery container">
+      <section id="gallery" class="gallery">
         <div class="gallery_row">
           <div class="gallery_column">
             <a href="">
