--- a/html/contatos.html
+++ b/html/contatos.html
@@ -31,13 +31,14 @@
               <img
                 class="filter_svg"
                 src="../img/logo/LOGO-ABITARE-SVG.svg"
-                alt=""
+                aria-label="Logo Abitare"
               />
             </a>
             <button
               class="mobile_nav_toggle"
               aria-controls="header_menu_items"
               aria-expanded="false"
+              aria-label="Menu Hamburguer button"
             >
               <span class="sr-only"></span>
             </button>
@@ -50,13 +51,13 @@
                   <a href="../index.html" class="hover">Home</a>
                 </li>
                 <li class="sobre">
-                  <a href="#" class="hover">Sobre Nós</a>
+                  <a href="./sobre.html" class="hover">Sobre Nós</a>
                 </li>
                 <li class="projetos">
-                  <a href="#" class="hover">Projetos</a>
+                  <a href="./projetos.html" class="hover">Projetos</a>
                 </li>
                 <li class="contatos">
-                  <a href="#" class="hover">Contatos</a>
+                  <a href="./contatos.html" class="hover">Contatos</a>
                 </li>
               </ul>
             </nav>
@@ -64,6 +65,10 @@
         </div>
       </div>
     </header>
+    <!-- BANNER -->
+    <div id="banner" class="banner_fixed">
+      <div class="banner_container"></div>
+    </div>
     <main id="content" class="container"></main>
     <footer id="footer" class="footer">
       <div class="footer_content container">
@@ -73,13 +78,17 @@
               <a href="#header" class="map_home hover">Home</a>
             </li>
             <li class="sobre">
-              <a href="#" class="map_sobre hover">Sobre Nós</a>
+              <a href="./html/sobre.html" class="map_sobre hover">Sobre Nós</a>
             </li>
             <li class="projetos">
-              <a href="#" class="map_projetos hover">Projetos</a>
+              <a href="./html/projetos.html" class="map_projetos hover"
+                >Projetos</a
+              >
             </li>
             <li class="contatos">
-              <a href="#" class="map_contatos hover">Contatos</a>
+              <a href="./html/contatos.html" class="map_contatos hover"
+                >Contatos</a
+              >
             </li>
           </ul>
         </div>
@@ -90,17 +99,27 @@
           </p>
         </div>
         <div class="logo_redes">
-          <a href="./">
-            <img src="../img/footer/redes/instagram.svg" alt="" />
+          <!-- Link para o Instagram -->
+          <a
+            href="https://www.instagram.com/abitare.arq"
+            target="_blank"
+            aria-label="Instagram"
+          >
+            <img src="./img/footer/redes/instagram.svg" alt="" />
           </a>
-          <a href="./">
-            <img src="../img/footer/redes/pinterest.svg" alt="" />
+          <!-- Link para o Pinterest -->
+          <a
+            href="https://www.pinterest.com/abitarearq"
+            target="_blank"
+            aria-label="Pinterest"
+          >
+            <img src="./img/footer/redes/pinterest.svg" alt="" />
           </a>
           <a
             href="https://wa.me/5511984073541?text=Olá,%20gostaria%20de%20mais%20informações!"
             target="_blank"
           >
-            <img src="../img/footer/redes/whatsapp.svg" alt="" />
+            <img src="./img/footer/redes/whatsapp.svg" alt="" />
           </a>
         </div>
       </div>
