--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
     </div>
     <main id="content" class="container">
       <section id="sobre_nos" class="sobre_nos">
-        <h2 class="title font-1-xxl">Sobre Nós</h2>
         <div class="persons">
           <h2 class="title">Sobre Nós</h2>
           <div class="person_0_grid">
             <div class="person_0">
-              <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="./img/perfil/cinthia e deka perfil.webp" alt="" />
             </div>
             <div class="person_0_text">
               <h3 class="tittle">
@@ -93,7 +92,7 @@
           </div>
           <div class="person_1_grid">
             <div class="person_1">
-              <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="./img/perfil/cinthia e deka perfil.webp" alt="" />
             </div>
             <div class="person_1_text">
               <h3 class="tittle">
@@ -122,7 +121,7 @@
               </p>
             </div>
             <div class="person_2">
-              <img src="./img/perfil/cinthia e deka perfil.jpg" alt="" />
+              <img src="./img/perfil/cinthia e deka perfil.webp" alt="" />
             </div>
           </div> -->
         </div>
@@ -130,28 +129,28 @@
       <section id="gallery" class="gallery">
         <div class="gallery_row">
           <div class="gallery_column">
-            <a href="">
-              <img src="./img/gallery/20231108_174046.jpg" alt="" />
+            <a href="./">
+              <img src="./img/gallery/20231108_174046.webp" alt="" />
             </a>
             <a href="">
-              <img src="./img/gallery/20240201_113121.jpg" alt="" />
+              <img src="./img/gallery/20240201_113121.webp" alt="" />
             </a>
             <a href="">
               <img src="./img/gallery/20240506_162907-ANIMATION.gif" alt="" />
             </a>
             <a href="">
-              <img src="./img/gallery/20240201_114944.jpg" alt="" />
+              <img src="./img/gallery/20240201_114944.webp" alt="" />
             </a>
             <a href="">
-              <img src="./img/gallery/20240201_175919.jpg" alt="" />
+              <img src="./img/gallery/20240201_175919.webp" alt="" />
             </a>
             <a href="">
               <img src="./img/gallery/20240506_160625-ANIMATION.gif" alt="" />
             </a>
             <a href=""
-              ><img src="./img/gallery/20240506_170503.jpg" alt="" />
+              ><img src="./img/gallery/20240506_170503.webp" alt="" />
             </a>
-            <a href=""> <img src="./img/gallery/Estante.jpg" alt="" /></a>
+            <a href=""> <img src="./img/gallery/Estante.webp" alt="" /></a>
           </div>
         </div>
       </section>
@@ -164,13 +163,13 @@
               <a href="#header" class="map_home hover">Home</a>
             </li>
             <li class="sobre">
-              <a href="#" class="map_sobre hover">Sobre Nós</a>
+              <a href="./html/sobre.html" class="map_sobre hover">Sobre Nós</a>
             </li>
             <li class="projetos">
-              <a href="#" class="map_projetos hover">Projetos</a>
+              <a href="./html/projetos.html" class="map_projetos hover">Projetos</a>
             </li>
             <li class="contatos">
-              <a href="#" class="map_contatos hover">Contatos</a>
+              <a href="./html/contatos.html" class="map_contatos hover">Contatos</a>
             </li>
           </ul>
         </div>
@@ -181,10 +180,20 @@
           </p>
         </div>
         <div class="logo_redes">
-          <a href="./">
+          <!-- Link para o Instagram -->
+          <a
+            href="https://www.instagram.com/abitare.arq"
+            target="_blank"
+            aria-label="Instagram"
+          >
             <img src="./img/footer/redes/instagram.svg" alt="" />
           </a>
-          <a href="./">
+          <!-- Link para o Pinterest -->
+          <a
+            href="https://www.pinterest.com/abitarearq"
+            target="_blank"
+            aria-label="Pinterest"
+          >
             <img src="./img/footer/redes/pinterest.svg" alt="" />
           </a>
           <a
