--- a/html/base_pages.html
+++ b/html/base_pages.html
@@ -64,6 +64,10 @@
         </div>
       </div>
     </header>
+    <!-- BANNER -->
+    <div id="banner" class="banner_fixed">
+      <div class="banner_container"></div>
+    </div>
     <main id="content" class="container"></main>
     <footer id="footer" class="footer">
       <div class="footer_content container">
